# sketchbook

./: .editorconfig  .firebaserc  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  CONTRIBUTING.md  README.md  SECURITY.md  build.gradle.kts  conveyor.conf  firebase.json  firestore.rules  gradle.properties  pyproject.toml  settings.gradle.kts  storage.rules
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  pages.yml  release.yml  secret-scan.yml
app-desktop/: build.gradle.kts  detekt-baseline-jvmMainSourceSet.xml  detekt-baseline-jvmTestSourceSet.xml
app-mcp/: build.gradle.kts  detekt-baseline-main.xml
build-logic/: build.gradle.kts  settings.gradle.kts
config/detekt/: detekt.yml
docs/: design-language.md  library-conventions.md  mcp-setup.md  parity.md
docs/ai/: CLAUDE.md  COPILOT.md  JUNIE.md
docs/architecture/: dependency-injection.md
docs/plans/: 2026-05-04-audio-catalog-design.md  2026-05-04-audio-catalog-v0.1-plan.md  2026-05-04-effort-score-design.md  2026-05-04-home-shelves-design.md  2026-05-04-indexer-architecture-plan.md  2026-05-04-library-organization-design.md  2026-05-04-macpath-repair-plan.md  2026-05-04-project-dedup-design.md  2026-05-04-project-dedup-plan.md  2026-05-04-sketchbook-ui.md  2026-05-04-tauri-bundling-design.md  2026-05-04-tauri-native-design.md  2026-05-04-web-stationery.md  2026-05-05-broken-projects-repair-design.md  2026-05-05-broken-projects-repair-plan.md  2026-05-05-kotlin-rewrite-impl-plan.md  2026-05-05-post-ui-implementation-plan.md  2026-05-05-search-overlay-design.md  2026-05-05-search-overlay-plan.md  2026-05-05-songstrip-readability-design.md  2026-05-05-songstrip-readability-plan.md  2026-05-05-sync-versioning-design.md  2026-05-06-1.0-release-readiness-plan.md  2026-05-06-als-repair-correctness-plan.md  2026-05-06-backend-integration-tests-design.md  2026-05-06-backend-integration-tests-plan.md  2026-05-06-feature-complete-design.md  2026-05-06-feature-complete-impl-plan.md  2026-05-06-metro-kmp-viewmodel-design.md  2026-05-06-oauth-user-scope-plan.md  (+17 more)
functions/: .gitignore  index.js  package.json
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
scripts/: build-sidecar.py  build_relink_fixture.py  make-placeholder-icon.py  pre-push
site/: README.md  index.html
src-tauri/: .gitignore  .taurignore  Cargo.toml  README.md  tauri.bundle.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/launcher/: Cargo.toml
src-tauri/launcher/src/: main.rs
src-tauri/src/: lib.rs  main.rs
tools/: gcp-setup.ps1  grant-user.ps1  release.ps1  rotate-gcp-key.ps1  setup-releases-bucket.ps1  smoke_real_backend.py
tools/asset-pipeline/: README.md  big_preview.py  debug_holds.py  process.py  pyproject.toml  verify.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
(+616 files in other folders)
