[project]
name = "audio"
version = "0.1.0dev"
description = "Ableton Live project catalog & organizer"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/core", "packages/cli", "packages/web", "packages/mcp"]

[tool.uv.sources]
audio-core = { workspace = true }
audio-cli  = { workspace = true }
audio-web  = { workspace = true }
audio-mcp  = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "packages/cli/tests", "packages/web/tests", "packages/mcp/tests"]
asyncio_mode = "auto"
