[package]
name = "audio-app"
version = "0.1.0"
description = "Ableton library catalog/organizer — native shell"
authors = ["srMarlins"]
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "audio_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
# Used for `tokio::time::timeout` around the sidecar port handshake. The
# `time` feature is the only one we need; the broader `rt`/`macros` features
# come transitively via tauri/tauri-plugin-shell.
tokio = { version = "1", features = ["time"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
