[package]
name = "audio-web-launcher"
version = "0.1.0"
edition = "2021"
publish = false
description = "Tiny exec-shim that launches the bundled python interpreter against audio_web.main"

[[bin]]
name = "audio-web"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
# Tiny wrapper around the Windows Job Object APIs. We use it to bundle the
# launcher and its python child into one job with KILL_ON_JOB_CLOSE — when
# the launcher process dies for any reason, Windows automatically kills the
# python child too. Without this, killing the launcher (Tauri exit, dev
# hot-reload, Task Manager) leaves orphan python processes sitting on the
# sidecar port and holding DB locks.
win32job = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
